feat: make brews inspectable and editable
